--- a/dsgrid_project/datasets/historical/dsgrid_efs_2012_losses/dataset.json5
+++ b/dsgrid_project/datasets/historical/dsgrid_efs_2012_losses/dataset.json5
@@ -1,122 +1,118 @@
-// translated from dsgrid efs using dan's script
-// data located in: /projects/dsgrid/efs_datasets/loss_model
 {
-  dataset_id: 'dsgrid_efs_2012_losses',
-  dataset_type: 'historical',
-  data_source: 'dsgrid_efs',
-  sector_description: 'electricity',
-  description: 'State-level estimates of distribution and transmission losses for historical year 2012 derived from FERC 714 (and similar) historical system-level timeseries profiles of 2012 load and 2012 losses reported on EIA Form 861. Details are in https://www.nrel.gov/docs/fy18osti/71492.pdf, starting on page 61.',
-  origin_creator: 'Elaine Hale',
-  origin_organization: 'NREL',
-  origin_contributors: ['Elaine Hale'],
-  origin_project: 'NREL Electrification Futures Study',
-  data_source_date: '2018',
-  data_source_version: '0.2.0',
-  data_source_doi_url: 'https://oedi-data-lake.s3.amazonaws.com/dsgrid-2018-efs/raw_complete/chp_dg.dsg',
-  data_classification: 'low',
-  tags: ['losses', 'efs', '2012', 'dsgrid_v0.2.0'],
-  trivial_dimensions: [
-    'weather_year',
-    'model_year',
-    'scenario',
-    'subsector',
+  dataset_id: "dsgrid_efs_2012_losses",
+  dataset_type: "historical",
+  data_source: "dsgrid_efs",
+  sector_description: "electricity",
+  description: "State-level estimates of distribution and transmission losses for historical year 2012 derived from FERC 714 (and similar) historical system-level timeseries profiles of 2012 load and 2012 losses reported on EIA Form 861. Details are in https://www.nrel.gov/docs/fy18osti/71492.pdf, starting on page 61.",
+  origin_creator: "Elaine Hale",
+  origin_organization: "NREL",
+  origin_contributors: [
+    "Elaine Hale",
   ],
-  // TODO: do we apply the same losses for every model year? for every scenario? @ehale says: We should apply the same loss rates for every model year and scenario. Basically we should have 2012 sales (EIA 861) + these losses = 2012 annual system load (FERC 714). For other years we would want to hold the ratios between sales and annual system load constant (compared to this data point).
-
-  // TODO: not sure if project association for data_source__model_year is correct here for dsgrid_efs_2012_losses. Do we expect only 2012 model year? Answer depends on TODO above.
-
-  table_schema: {
+  origin_project: "NREL Electrification Futures Study",
+  data_source_date: "2018",
+  data_source_version: "0.2.0",
+  data_source_doi_url: "https://oedi-data-lake.s3.amazonaws.com/dsgrid-2018-efs/raw_complete/chp_dg.dsg",
+  data_classification: "low",
+  tags: [
+    "losses",
+    "efs",
+    "2012",
+    "dsgrid_v0.2.0",
+  ],
+  trivial_dimensions: [
+    "weather_year",
+    "model_year",
+    "scenario",
+    "subsector",
+  ],
+  dimensions: [
+    {
+      type: "geography",
+      name: "state",
+      file: "../../../dimensions/supplemental/states.csv",
+      module: "dsgrid.dimension.standard",
+      "class": "State",
+      description: "Lower 48 Contiguous US States",
+    },
+    {
+      type: "sector",
+      name: "all_sectors",
+      file: "dimensions/sector.csv",
+      module: "dsgrid.dimension.standard",
+      "class": "Sector",
+      description: "All Sectors",
+    },
+    {
+      type: "subsector",
+      name: "unspecified_subsector",
+      file: "dimensions/subsectors.csv",
+      module: "dsgrid.dimension.standard",
+      "class": "Subsector",
+      description: "Subsector Unspecified",
+    },
+    {
+      type: "metric",
+      name: "unspecified_electricity",
+      file: "dimensions/metric.csv",
+      module: "dsgrid.dimension.standard",
+      "class": "EnergyEndUse",
+      description: "Unspecified Electricity",
+    },
+    {
+      type: "scenario",
+      name: "reference_scenario",
+      file: "../../modeled/resstock/dimensions/scenario_conus_2022_reference.csv",
+      module: "dsgrid.dimension.standard",
+      "class": "Scenario",
+      description: "CONUS (Continental U.S.) 2022 Reference",
+    },
+    {
+      type: "model_year",
+      name: "model_year_2012",
+      file: "dimensions/model_year.csv",
+      module: "dsgrid.dimension.standard",
+      "class": "ModelYear",
+      description: "2012 Model Year",
+    },
+    {
+      "class": "WeatherYear",
+      description: "Weather year, 2012 only",
+      file: "../../../dimensions/weather_years.csv",
+      module: "dsgrid.dimension.standard",
+      name: "weather_2012",
+      type: "weather_year",
+    },
+    {
+      name: "EST_hourly_2012",
+      type: "time",
+      module: "dsgrid.dimension.standard",
+      "class": "Time",
+      description: "Time dimension, 2012 hourly EST, period-ending, no DST, no Leap Day Adjustment, total value",
+      time_type: "datetime",
+      measurement_type: "total",
+      str_format: "%Y-%m-%d %H:%M:%S",
+      frequency: "P0DT1H0M0.000000S",
+      leap_day_adjustment: "none",
+      time_interval_type: "period_ending",
+      timezone: "EasternStandard",
+      ranges: [
+        {
+          start: "2012-01-01 01:00:00",
+          end: "2013-01-01 00:00:00",
+        },
+      ],
+    },
+  ],
+  data_layout: {
+    table_format: "two_table",
+    value_format: "pivoted",
+    pivoted_dimension_type: "metric",
     data_file: {
       path: "load_data.parquet",
     },
     lookup_data_file: {
       path: "load_data_lookup.parquet",
     },
-    data_schema: {
-      table_format: {
-        format_type: "pivoted",
-        pivoted_dimension_type: "metric",
-      },
-      data_schema_type: "standard",
-    },
   },
-  dimensions: [
-    {
-      type: 'geography',
-      name: 'state',
-      file: '../../../dimensions/supplemental/states.csv',
-      module: 'dsgrid.dimension.standard',
-      class: 'State',
-      description: 'Lower 48 Contiguous US States',
-    },
-    {
-      type: 'sector',
-      name: 'all_sectors',
-      file: 'dimensions/sector.csv',
-      module: 'dsgrid.dimension.standard',
-      class: 'Sector',
-      description: 'All Sectors',
-    },
-    {
-      type: 'subsector',
-      name: 'unspecified_subsector',
-      file: 'dimensions/subsectors.csv',
-      module: 'dsgrid.dimension.standard',
-      class: 'Subsector',
-      description: 'Subsector Unspecified',
-    },
-    {
-      type: 'metric',
-      name: 'unspecified_electricity',
-      file: 'dimensions/metric.csv',
-      module: 'dsgrid.dimension.standard',
-      class: 'EnergyEndUse',
-      description: 'Unspecified Electricity',
-    },
-    {
-      type: 'scenario',
-      name: 'reference_scenario',
-      file: '../../modeled/resstock/dimensions/scenario_conus_2022_reference.csv',
-      module: 'dsgrid.dimension.standard',
-      class: 'Scenario',
-      description: 'CONUS (Continental U.S.) 2022 Reference',
-    },
-    {
-      type: 'model_year',
-      name: 'model_year_2012',
-      file: 'dimensions/model_year.csv',
-      module: 'dsgrid.dimension.standard',
-      class: 'ModelYear',
-      description: '2012 Model Year',
-    },
-    {
-      class: 'WeatherYear',
-      description: 'Weather year, 2012 only',
-      file: '../../../dimensions/weather_years.csv',
-      module: 'dsgrid.dimension.standard',
-      name: 'weather_2012',
-      type: 'weather_year',
-    },
-    {
-      // Note: this does not match the project time because of it being period-ending, not period-beginning
-      name: 'EST_hourly_2012',
-      type: 'time',
-      module: 'dsgrid.dimension.standard',
-      class: 'Time',
-      description: 'Time dimension, 2012 hourly EST, period-ending, no DST, no Leap Day Adjustment, total value',
-      time_type: 'datetime',
-      measurement_type: 'total',
-      str_format: '%Y-%m-%d %H:%M:%S',
-      frequency: 'P0DT1H0M0.000000S',
-      leap_day_adjustment: 'none',
-      time_interval_type: 'period_ending',
-      timezone: 'EasternStandard',
-      ranges: [
-        {
-          start: '2012-01-01 01:00:00',
-          end: '2013-01-01 00:00:00',
-        },
-      ],
-    },
-  ],
 }
