--- a/dsgrid_project/datasets/historical/eia_861_annual_energy_use_state_sector/dataset.json5
+++ b/dsgrid_project/datasets/historical/eia_861_annual_energy_use_state_sector/dataset.json5
@@ -1,110 +1,112 @@
 {
-  dataset_id: 'eia_861_annual_energy_use_state_sector',
-  data_source: 'EIA 861',
-  dataset_type: 'historical',
-  sector_description: '',
-  description: 'EIA 861 Utility Customer Sales (MWh) by State by Sector by Year for 2010-2020. This yearly 2010-2020 data was collected from EIA and processed by NREL dsgrid team. The Sales_Ult_Cust_<year> dataset was processed to get total sales (MWh) to customers by sector (com, res, ind, trans). The original data is utility-state, but for this dataset, we took the state sums. Furnished without Charge sales from the Operational_Data_{year} table were added to the commercial sector. Data processing scripts can be found in the dsgrid-Standard-Scenarios project repository under dsgrid-project/historical/eia_861_annual_energy_use_state_sector/scripts.',
-  origin_creator: 'Meghan Mooney',
-  origin_organization: 'EIA',
+  dataset_id: "eia_861_annual_energy_use_state_sector",
+  data_source: "EIA 861",
+  dataset_type: "historical",
+  sector_description: "",
+  description: "EIA 861 Utility Customer Sales (MWh) by State by Sector by Year for 2010-2020. This yearly 2010-2020 data was collected from EIA and processed by NREL dsgrid team. The Sales_Ult_Cust_<year> dataset was processed to get total sales (MWh) to customers by sector (com, res, ind, trans). The original data is utility-state, but for this dataset, we took the state sums. Furnished without Charge sales from the Operational_Data_{year} table were added to the commercial sector. Data processing scripts can be found in the dsgrid-Standard-Scenarios project repository under dsgrid-project/historical/eia_861_annual_energy_use_state_sector/scripts.",
+  origin_creator: "Meghan Mooney",
+  origin_organization: "EIA",
   origin_contributors: [
-    'EIA electricity data experts, infoelectric@eia.gov',
-    'Meghan Mooney (NREL)',
-    'Lixi Liu (NREL)',
-    'Elaine Hale (NREL)',
+    "EIA electricity data experts, infoelectric@eia.gov",
+    "Meghan Mooney (NREL)",
+    "Lixi Liu (NREL)",
+    "Elaine Hale (NREL)",
   ],
-  origin_project: 'EIA 861',
-  data_source_date: '2021-11-03',
-  data_source_version: '2010-2020',
-  data_source_doi_url: 'Data extracted from EIA 861 utility customer sales',
-  data_classification: 'low',
-  tags: ['historical', 'eia861', 'sales'],
-  trivial_dimensions: ['subsector', 'scenario'],
-  table_schema: {
+  origin_project: "EIA 861",
+  data_source_date: "2021-11-03",
+  data_source_version: "2010-2020",
+  data_source_doi_url: "Data extracted from EIA 861 utility customer sales",
+  data_classification: "low",
+  tags: [
+    "historical",
+    "eia861",
+    "sales",
+  ],
+  trivial_dimensions: [
+    "subsector",
+    "scenario",
+  ],
+  dimensions: [
+    {
+      "class": "State",
+      description: "US States",
+      file: "dimensions/states.csv",
+      module: "dsgrid.dimension.standard",
+      name: "state",
+      type: "geography",
+    },
+    {
+      "class": "Sector",
+      description: "dsgrid Standard Scenarios 2021 Sectors; Commercial, Residential, Industrial and Transportation",
+      file: "dimensions/sectors.csv",
+      module: "dsgrid.dimension.standard",
+      name: "sector",
+      type: "sector",
+    },
+    {
+      type: "subsector",
+      name: "unspecified_subsector",
+      file: "dimensions/subsectors_unspecified.csv",
+      module: "dsgrid.dimension.standard",
+      "class": "Subsector",
+      description: "Subsectors Unspecified",
+    },
+    {
+      type: "metric",
+      name: "customer_sales",
+      file: "dimensions/eia861_sales_metric.csv",
+      module: "dsgrid.dimension.standard",
+      "class": "EnergyEndUse",
+      description: "Utility Customer Electricity Sales (MWh)",
+    },
+    {
+      type: "scenario",
+      name: "reference_scenario",
+      file: "../../modeled/resstock/dimensions/scenario_conus_2022_reference.csv",
+      module: "dsgrid.dimension.standard",
+      "class": "Scenario",
+      description: "Scenario CONUS (Continental U.S.) 2022 Reference",
+    },
+    {
+      type: "weather_year",
+      name: "historical_weather_year",
+      file: "dimensions/weather_years_2010_to_2020.csv",
+      module: "dsgrid.dimension.standard",
+      "class": "WeatherYear",
+      description: "Weather years, 2010-2020",
+    },
+    {
+      type: "model_year",
+      name: "historical_year",
+      file: "dimensions/model_years_2010_to_2020.csv",
+      module: "dsgrid.dimension.standard",
+      "class": "ModelYear",
+      description: "Model years, 2010-2020",
+    },
+    {
+      type: "time",
+      "class": "AnnualTime",
+      time_type: "annual",
+      module: "dsgrid.dimension.standard",
+      description: "Annual time 2010-2020",
+      name: "annual_time",
+      ranges: [
+        {
+          start: "2010",
+          end: "2020",
+        },
+      ],
+      str_format: "%Y",
+      include_leap_day: true,
+      measurement_type: "total",
+    },
+  ],
+  data_layout: {
+    table_format: "one_table",
+    value_format: "pivoted",
+    pivoted_dimension_type: "metric",
     data_file: {
       path: "load_data.parquet",
     },
-    data_schema: {
-      table_format: {
-        format_type: "pivoted",
-        pivoted_dimension_type: "metric",
-      },
-      data_schema_type: "one_table",
-    },
   },
-  dimensions: [
-    {
-      // this is different than the project supplemental state dimension (it includes AK and HI)
-      class: 'State',
-      description: 'US States',
-      file: 'dimensions/states.csv',
-      module: 'dsgrid.dimension.standard',
-      name: 'state',
-      type: 'geography',
-    },
-    {
-      class: 'Sector',
-      description: 'dsgrid Standard Scenarios 2021 Sectors; Commercial, Residential, Industrial and Transportation',
-      file: 'dimensions/sectors.csv',
-      module: 'dsgrid.dimension.standard',
-      name: 'sector',
-      type: 'sector',
-    },
-    {
-      type: 'subsector',
-      name: 'unspecified_subsector',
-      file: 'dimensions/subsectors_unspecified.csv',
-      module: 'dsgrid.dimension.standard',
-      class: 'Subsector',
-      description: 'Subsectors Unspecified',
-    },
-    {
-      type: 'metric',
-      name: 'customer_sales',
-      file: 'dimensions/eia861_sales_metric.csv',
-      module: 'dsgrid.dimension.standard',
-      class: 'EnergyEndUse',
-      description: 'Utility Customer Electricity Sales (MWh)',
-    },
-    {
-      type: 'scenario',
-      name: 'reference_scenario',
-      file: '../../modeled/resstock/dimensions/scenario_conus_2022_reference.csv',
-      module: 'dsgrid.dimension.standard',
-      class: 'Scenario',
-      description: 'Scenario CONUS (Continental U.S.) 2022 Reference',
-    },
-    {
-      type: 'weather_year',
-      name: 'historical_weather_year',
-      file: 'dimensions/weather_years_2010_to_2020.csv',
-      module: 'dsgrid.dimension.standard',
-      class: 'WeatherYear',
-      description: 'Weather years, 2010-2020',
-    },
-    {
-      type: 'model_year',
-      name: 'historical_year',
-      file: 'dimensions/model_years_2010_to_2020.csv',
-      module: 'dsgrid.dimension.standard',
-      class: 'ModelYear',
-      description: 'Model years, 2010-2020',
-    },
-    {
-      type: 'time',
-      class: 'AnnualTime',
-      time_type: 'annual',
-      module: 'dsgrid.dimension.standard',
-      description: 'Annual time 2010-2020',
-      name: 'annual_time',
-      ranges: [
-        {
-          start: '2010',
-          end: '2020',
-        },
-      ],
-      str_format: '%Y',
-      include_leap_day: true,
-      measurement_type: 'total',
-    },
-  ],
 }
