--- a/dsgrid_project/datasets/modeled/aeo2021_reference/other_commercial/Growth_Factors/dataset.json5
+++ b/dsgrid_project/datasets/modeled/aeo2021_reference/other_commercial/Growth_Factors/dataset.json5
@@ -1,115 +1,111 @@
 {
-    dataset_id: "aeo2021_reference_other_commercial_energy_use_growth_factors",
-    dataset_type: "modeled",
-    data_source: "NEMS Commercial Module",
-    description: "AEO 2021 Reference Case Other Commercial Energy End Use Annual Growth Factors. Simple exponential growth rates computed by NREL to describe total commercial floor area growth from 2018 to 2050 per census division. Applying such growth rates to 'other commercial' load aligns with the NEMS Commercial Module practice of growing 'SEDS mistie' quantities using the total floorspace growth rate in projection years and labeling such energy use as 'non-building uses' (https://www.eia.gov/outlooks/aeo/nems/documentation/commercial/pdf/CDM_2022.pdf, Figure 9).",
-    origin_creator: "Kevin Jarzomski",
-    origin_organization: "EIA",
-    origin_contributors: [
-        "Elaine Hale",
-        "Lixi Liu"
-    ],
-    origin_project: "dsgrid CONUS 2022",
-    data_source_date: "2023-02-03",
-    data_source_version: "0.1.0",
-    data_source_doi_url: "Data derived from AEO 2021 detailed commercial sector files sent from EIA",
-    data_classification: "low",
-    tags: [
-        "commercial",
-        "benchmark",
-        "projection",
-        "aeo2021",
-        "dsgrid_v0.2.0",
-        "non-building uses",
-        "other commercial",
-    ],
-    trivial_dimensions: [
-        "sector",
-        "subsector",
-        "scenario",
-        "weather_year",
-        "model_year",
-    ],
-  table_schema: {
+  dataset_id: "aeo2021_reference_other_commercial_energy_use_growth_factors",
+  dataset_type: "modeled",
+  data_source: "NEMS Commercial Module",
+  description: "AEO 2021 Reference Case Other Commercial Energy End Use Annual Growth Factors. Simple exponential growth rates computed by NREL to describe total commercial floor area growth from 2018 to 2050 per census division. Applying such growth rates to 'other commercial' load aligns with the NEMS Commercial Module practice of growing 'SEDS mistie' quantities using the total floorspace growth rate in projection years and labeling such energy use as 'non-building uses' (https://www.eia.gov/outlooks/aeo/nems/documentation/commercial/pdf/CDM_2022.pdf, Figure 9).",
+  origin_creator: "Kevin Jarzomski",
+  origin_organization: "EIA",
+  origin_contributors: [
+    "Elaine Hale",
+    "Lixi Liu",
+  ],
+  origin_project: "dsgrid CONUS 2022",
+  data_source_date: "2023-02-03",
+  data_source_version: "0.1.0",
+  data_source_doi_url: "Data derived from AEO 2021 detailed commercial sector files sent from EIA",
+  data_classification: "low",
+  tags: [
+    "commercial",
+    "benchmark",
+    "projection",
+    "aeo2021",
+    "dsgrid_v0.2.0",
+    "non-building uses",
+    "other commercial",
+  ],
+  trivial_dimensions: [
+    "sector",
+    "subsector",
+    "scenario",
+    "weather_year",
+    "model_year",
+  ],
+  dataset_qualifier_metadata: {
+    growth_rate_type: "exponential_annual",
+    dataset_qualifier_type: "growth_rate",
+  },
+  dimensions: [
+    {
+      "class": "CensusDivision",
+      description: "US Census Divisions",
+      file: "../../../../../dimensions/supplemental/census_divisions.csv",
+      module: "dsgrid.dimension.standard",
+      type: "geography",
+      name: "census_division",
+    },
+    {
+      "class": "Sector",
+      description: "Commercial sector only",
+      file: "../../../../modeled/comstock/dimensions/sector_commercial.csv",
+      module: "dsgrid.dimension.standard",
+      type: "sector",
+      name: "sector",
+    },
+    {
+      "class": "Subsector",
+      description: "AEO 2021 commercial non-building subsector (N=1)",
+      file: "dimensions/subsector.csv",
+      module: "dsgrid.dimension.standard",
+      name: "subsector",
+      type: "subsector",
+    },
+    {
+      "class": "EnergyEndUse",
+      description: "Unspecified electricity growth rates (unitless, single value)",
+      file: "dimensions/metric.csv",
+      module: "dsgrid.dimension.standard",
+      type: "metric",
+      name: "aeo_unspecified_electricity_end_use",
+    },
+    {
+      "class": "Scenario",
+      description: "EIA AEO Reference Scenario",
+      file: "../../commercial/End_Use_Growth_Factors/dimensions/aeo_reference_scenario.csv",
+      module: "dsgrid.dimension.standard",
+      type: "scenario",
+      name: "reference_scenario",
+    },
+    {
+      "class": "WeatherYear",
+      description: "Weather year, 2012 only",
+      file: "../../../../../dimensions/weather_years.csv",
+      module: "dsgrid.dimension.standard",
+      name: "weather_2012",
+      type: "weather_year",
+    },
+    {
+      "class": "ModelYear",
+      description: "Model years, 2013-2050, trivial, single record",
+      file: "../../commercial/End_Use_Growth_Factors/dimensions/model_years_trivial_2013_to_2050.csv",
+      module: "dsgrid.dimension.standard",
+      type: "model_year",
+      name: "model_year",
+    },
+    {
+      "class": "NoOpTime",
+      description: "No Operation Time",
+      time_type: "noop",
+      module: "dsgrid.dimension.standard",
+      type: "time",
+      name: "no_op_time",
+    },
+  ],
+  data_layout: {
+    table_format: "one_table",
+    value_format: "pivoted",
+    pivoted_dimension_type: "metric",
     data_file: {
       path: "load_data.parquet",
     },
-    data_schema: {
-      table_format: {
-        format_type: "pivoted",
-        pivoted_dimension_type: "metric",
-      },
-      data_schema_type: "one_table",
-    },
   },
-    dataset_qualifier_metadata: {
-        growth_rate_type: "exponential_annual",
-        dataset_qualifier_type: "growth_rate",
-    },
-    dimensions: [
-        {
-            "class": "CensusDivision",
-            description: "US Census Divisions",
-            file: "../../../../../dimensions/supplemental/census_divisions.csv",
-            module: "dsgrid.dimension.standard",
-            type: "geography",
-            name: "census_division",
-        },
-        {
-            "class": "Sector",
-            description: "Commercial sector only",
-            file: "../../../../modeled/comstock/dimensions/sector_commercial.csv",
-            module: "dsgrid.dimension.standard",
-            type: "sector",
-            name: "sector",
-        },
-        {
-            "class": "Subsector",
-            description: "AEO 2021 commercial non-building subsector (N=1)",
-            file: "dimensions/subsector.csv",
-            module: "dsgrid.dimension.standard",
-            name: "subsector",
-            type: "subsector",
-        },
-        {
-            "class": "EnergyEndUse",
-            description: "Unspecified electricity growth rates (unitless, single value)",
-            file: "dimensions/metric.csv",
-            module: "dsgrid.dimension.standard",
-            type: "metric",
-            name: "aeo_unspecified_electricity_end_use",
-        },
-        {
-            "class": "Scenario",
-            description: "EIA AEO Reference Scenario",
-            file: "../../commercial/End_Use_Growth_Factors/dimensions/aeo_reference_scenario.csv",
-            module: "dsgrid.dimension.standard",
-            type: "scenario",
-            name: "reference_scenario",
-        },
-        {
-            "class": "WeatherYear",
-            description: "Weather year, 2012 only",
-            file: "../../../../../dimensions/weather_years.csv",
-            module: "dsgrid.dimension.standard",
-            name: "weather_2012",
-            type: "weather_year",
-        },
-        {
-            "class": "ModelYear",
-            description: "Model years, 2013-2050, trivial, single record",
-            file: "../../commercial/End_Use_Growth_Factors/dimensions/model_years_trivial_2013_to_2050.csv",
-            module: "dsgrid.dimension.standard",
-            type: "model_year",
-            name: "model_year",
-        },
-        {
-            "class": "NoOpTime",
-            description: "No Operation Time",
-            time_type: "noop",
-            module: "dsgrid.dimension.standard",
-            type: "time",
-            name: "no_op_time",
-        },
-    ]
 }
