--- a/dsgrid_project/datasets/historical/dsgrid_efs_historical_2012_conus_load_shapes/dataset.json5
+++ b/dsgrid_project/datasets/historical/dsgrid_efs_historical_2012_conus_load_shapes/dataset.json5
@@ -1,4 +1,3 @@
-// translated from dsgrid efs using dan's script:  https://github.com/dsgrid/dsgrid-legacy-efs-api/tree/main/bin
 {
   dataset_id: "dsgrid_efs_historical_2012_conus_load_shapes",
   dataset_type: "historical",
@@ -32,21 +31,6 @@
     "scenario",
     "subsector",
   ],
-  table_schema: {
-    data_file: {
-      path: "load_data.parquet",
-    },
-    lookup_data_file: {
-      path: "load_data_lookup.parquet",
-    },
-    data_schema: {
-      table_format: {
-        format_type: "pivoted",
-        pivoted_dimension_type: "metric",
-      },
-      data_schema_type: "standard",
-    },
-  },
   dimensions: [
     {
       type: "geography",
@@ -73,12 +57,12 @@
       description: "Unspecified Subsectors",
     },
     {
-      type: 'metric',
-      name: 'unspecified_electricity',
-      file: 'dimensions/metric.csv',
-      module: 'dsgrid.dimension.standard',
-      class: 'EnergyEndUse',
-      description: 'Unspecified Electricity',
+      type: "metric",
+      name: "unspecified_electricity",
+      file: "dimensions/metric.csv",
+      module: "dsgrid.dimension.standard",
+      "class": "EnergyEndUse",
+      description: "Unspecified Electricity",
     },
     {
       type: "scenario",
@@ -105,7 +89,6 @@
       type: "weather_year",
     },
     {
-      // Note: this does not match the project time because of it being period-ending, not period-beginning
       name: "EST_hourly_2012",
       type: "time",
       module: "dsgrid.dimension.standard",
@@ -126,4 +109,15 @@
       ],
     },
   ],
+  data_layout: {
+    table_format: "two_table",
+    value_format: "pivoted",
+    pivoted_dimension_type: "metric",
+    data_file: {
+      path: "load_data.parquet",
+    },
+    lookup_data_file: {
+      path: "load_data_lookup.parquet",
+    },
+  },
 }
