--- a/dsgrid_project/datasets/modeled/aeo2021_reference/residential/End_Use_Growth_Factors/dataset.json5
+++ b/dsgrid_project/datasets/modeled/aeo2021_reference/residential/End_Use_Growth_Factors/dataset.json5
@@ -28,18 +28,6 @@
     "weather_year",
     "model_year",
   ],
-  table_schema: {
-    data_file: {
-      path: "load_data.parquet",
-    },
-    data_schema: {
-      table_format: {
-        format_type: "pivoted",
-        pivoted_dimension_type: "metric",
-      },
-      data_schema_type: "one_table",
-    },
-  },
   dataset_qualifier_metadata: {
     growth_rate_type: "exponential_annual",
     dataset_qualifier_type: "growth_rate",
@@ -109,4 +97,12 @@
       version: "1.0.0",
     },
   ],
+  data_layout: {
+    table_format: "one_table",
+    value_format: "pivoted",
+    pivoted_dimension_type: "metric",
+    data_file: {
+      path: "load_data.parquet",
+    },
+  },
 }
