--- a/dsgrid_project/datasets/modeled/comstock/dataset.json5
+++ b/dsgrid_project/datasets/modeled/comstock/dataset.json5
@@ -29,21 +29,6 @@
     "model_year",
     "scenario",
   ],
-  table_schema: {
-    data_file: {
-      path: "load_data.parquet",
-    },
-    lookup_data_file: {
-      path: "load_data_lookup.parquet",
-    },
-    data_schema: {
-      table_format: {
-        format_type: "pivoted",
-        pivoted_dimension_type: "metric",
-      },
-      data_schema_type: "standard",
-    },
-  },
   dimensions: [
     {
       type: "geography",
@@ -102,7 +87,6 @@
       type: "weather_year",
     },
     {
-      //  for time-wrapped dataset
       "class": "Time",
       frequency: "P0DT1H0M0.000000S",
       name: "time_est",
@@ -121,25 +105,16 @@
       measurement_type: "total",
       type: "time",
     },
-    // for real dataset
-    // {
-    //   "class": "Time",
-    //   frequency: "P0DT1H0M0.000000S",
-    //   name: "time_est",
-    //   ranges: [
-    //     {
-    //       start: "2012-01-01 01:00:00",
-    //       end: "2013-01-01 00:00:00",
-    //     },
-    //   ],
-    //   time_type: "datetime",
-    //   leap_day_adjustment: "none",
-    //   description: "Time dimension, 2012 hourly UTC, period-ending, starts at Hour 6, 8784 timestamps, total value, local ranges_timezone",
-    //   time_interval_type: "period_ending",
-    //   str_format: "%Y-%m-%d %H:%M:%S",
-    //   timezone: "UTC",
-    //   measurement_type: "total",
-    //   type: "time",
-    // },
   ],
+  data_layout: {
+    table_format: "two_table",
+    value_format: "pivoted",
+    pivoted_dimension_type: "metric",
+    data_file: {
+      path: "load_data.parquet",
+    },
+    lookup_data_file: {
+      path: "load_data_lookup.parquet",
+    },
+  },
 }
